# SummerDB

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/SummerDB/: SummerDB.h  SummerDB.hpp
include/SummerDB/Catalog/: AbstractCatalog.hpp  Catalog.hpp  CatalogSet.hpp  ColumnCatalog.hpp  ColumnDefinition.hpp  SchemaCatalog.hpp  TableCatalog.hpp
include/SummerDB/Common/: Allocator.hpp  Exception.hpp  FileSystem.hpp  Helper.hpp  InternalTypes.hpp  Printable.hpp  Profiler.hpp  Serializer.hpp  StringUtil.h  StringUtil.hpp
include/SummerDB/Core/: ClientContext.hpp  Connection.hpp  Database.hpp  QueryProfiler.hpp  Result.hpp
include/SummerDB/Execution/: AggregateHashtable.hpp  ColumnBindingResolver.hpp  Executor.hpp  (+3 more)
lib/Catalog/: Catalog.cc  CatalogSet.cc  ColumnCatalog.cc  ColumnDefinition.cc  SchemaCatalog.cc  TableCatalog.cc
lib/Common/: FileSystem.cc  InternalTypes.cc  Printable.cc  Serializer.cc  StringUtil.cc
lib/Core/: ClientContext.cc  Connection.cc  Database.cc  QueryProfiler.cc  Result.cc  SummerDB-c.cc
lib/Execution/: AggregateHashtable.cc  ColumnBindingResolver.cc  Executor.cc  ExpressionExecutor.cc  PhysicalOperator.cc  PhysicalPlanGenerator.cc
lib/Optimizer/: Optimizer.cc
lib/Parser/: Constraint.cc  Expression.cc  Parser.cc  SqlNodeVisitor.cc
lib/Planner/: BindContext.cc  Binder.cc  LogicalOperatorVisitor.cc  LogicalPlanGenerator.cc  LogicalVisitor.cc  Planner.cc
lib/Storage/: BufferPool.cc  DataColumn.cc  DataTable.cc  StorageChunk.cc  StorageManager.cc  UniqueIndex.cc  WriteAheadLog.cc
lib/Transaction/: Transaction.cc  TransactionContext.cc  TransactionManager.cc  UndoBuffer.cc
tests/Common/: CMakeLists.txt
tools/driver/: CMakeLists.txt
unittests/: CMakeLists.txt
unittests/Common/: CMakeLists.txt
(+164 files in other folders)
